0025468: GeomConvert_ApproxSurface should have a constructor for adaptors

Additional constructors were implemented into classes:
GeomConvert_ApproxCurve
GeomConvert_ApproxSurface
Geom2dConvert_ApproxCurve